# deomo-recommendation-system

./: README.md  pnpm-lock.yaml
apps/api/: .env.example  README.md  package.json  pyproject.toml  requirements.txt
apps/api/scripts/: seed_wines.py
apps/api/src/: config.py  main.py
apps/api/src/db/: supabase.py
apps/api/src/models/: session.py  slots.py  wine.py
apps/api/src/routers/: chat.py  sessions.py  wines.py
apps/api/src/services/: recommender.py  slot_extractor.py  wine_query.py
apps/api/src/session/: redis.py
apps/web/: next.config.js
apps/web/app/: layout.tsx
apps/web/app/chat/: page.tsx
apps/web/app/store/: page.tsx
apps/web/components/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  Sidebar.tsx  SlotTracker.tsx  StorePage.tsx  WineCard.tsx  WineDetailModal.tsx  WineSuggestions.tsx
apps/web/components/theme/: theme.css
apps/web/hooks/: useChat.ts  useVoiceInput.ts
apps/web/lib/: api.ts
